@@ -1,0 +1,4 @@
+README
+docs/boa.html
+docs/boa_banner.png
+docs/boa.texi
